@@ -21,6 +21,9 @@
 // stdafx.cpp : source file that includes just the standard includes
 //	Merge.pch will be the pre-compiled header
 //	stdafx.obj will contain the pre-compiled type information
+//
+// RCS ID line follows -- this is updated by CVS
+// $Id$
 
 #include "stdafx.h"
 #include "LogFile.h"
